ExpresionesParser.py
# Generated from Expresiones.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExpresionesParser ( Parser ):

    grammarFileName = "Expresiones.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'while'", "'for'", 
                     "'return'", "'print'", "'program'", "'void'", "'int'", 
                     "'float'", "'bool'", "'string'", "<INVALID>", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'=='", "<INVALID>", "'<='", 
                     "'>='", "'<'", "'>'", "'&&'", "'||'", "'!'", "'='", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "WHILE", "FOR", "RETURN", 
                      "PRINT", "PROGRAM", "VOID", "INT_T", "FLOAT_T", "BOOL_T", 
                      "STRING_T", "BOOL_LIT", "SUMA", "RESTA", "MULTIP", 
                      "DIV", "MOD", "EQ", "NOEQ", "MENIQ", "MAYIQ", "MENOR", 
                      "MAYOR", "AND", "OR", "NOT", "ASIGNA", "PARENA", "PARENC", 
                      "LLAVEA", "LLAVEC", "CORCHETA", "CORCHETC", "PCOMA", 
                      "COMMA", "FLOAT_LIT", "NUM", "STRING_LIT", "ID", "WS", 
                      "COMMENT", "BLOQUE_COMM" ]

    RULE_program = 0
    RULE_topLevelDecl = 1
    RULE_funcDecl = 2
    RULE_returnType = 3
    RULE_paramList = 4
    RULE_param = 5
    RULE_statement = 6
    RULE_varDecl = 7
    RULE_assignment = 8
    RULE_ifStatement = 9
    RULE_whileStatement = 10
    RULE_forStatement = 11
    RULE_forInit = 12
    RULE_forUpdate = 13
    RULE_returnStatement = 14
    RULE_printStatement = 15
    RULE_exprStatement = 16
    RULE_block = 17
    RULE_t_type = 18
    RULE_expr = 19
    RULE_argList = 20

    ruleNames =  [ "program", "topLevelDecl", "funcDecl", "returnType", 
                   "paramList", "param", "statement", "varDecl", "assignment", 
                   "ifStatement", "whileStatement", "forStatement", "forInit", 
                   "forUpdate", "returnStatement", "printStatement", "exprStatement", 
                   "block", "t_type", "expr", "argList" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    WHILE=3
    FOR=4
    RETURN=5
    PRINT=6
    PROGRAM=7
    VOID=8
    INT_T=9
    FLOAT_T=10
    BOOL_T=11
    STRING_T=12
    BOOL_LIT=13
    SUMA=14
    RESTA=15
    MULTIP=16
    DIV=17
    MOD=18
    EQ=19
    NOEQ=20
    MENIQ=21
    MAYIQ=22
    MENOR=23
    MAYOR=24
    AND=25
    OR=26
    NOT=27
    ASIGNA=28
    PARENA=29
    PARENC=30
    LLAVEA=31
    LLAVEC=32
    CORCHETA=33
    CORCHETC=34
    PCOMA=35
    COMMA=36
    FLOAT_LIT=37
    NUM=38
    STRING_LIT=39
    ID=40
    WS=41
    COMMENT=42
    BLOQUE_COMM=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(ExpresionesParser.PROGRAM, 0)

        def LLAVEA(self):
            return self.getToken(ExpresionesParser.LLAVEA, 0)

        def LLAVEC(self):
            return self.getToken(ExpresionesParser.LLAVEC, 0)

        def EOF(self):
            return self.getToken(ExpresionesParser.EOF, 0)

        def ID(self):
            return self.getToken(ExpresionesParser.ID, 0)

        def topLevelDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpresionesParser.TopLevelDeclContext)
            else:
                return self.getTypedRuleContext(ExpresionesParser.TopLevelDeclContext,i)


        def getRuleIndex(self):
            return ExpresionesParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ExpresionesParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(ExpresionesParser.PROGRAM)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 43
                self.match(ExpresionesParser.ID)


            self.state = 46
            self.match(ExpresionesParser.LLAVEA)
            self.state = 48 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 47
                self.topLevelDecl()
                self.state = 50 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ExpresionesParser.IF) | (1 << ExpresionesParser.WHILE) | (1 << ExpresionesParser.FOR) | (1 << ExpresionesParser.RETURN) | (1 << ExpresionesParser.PRINT) | (1 << ExpresionesParser.VOID) | (1 << ExpresionesParser.INT_T) | (1 << ExpresionesParser.FLOAT_T) | (1 << ExpresionesParser.BOOL_T) | (1 << ExpresionesParser.STRING_T) | (1 << ExpresionesParser.BOOL_LIT) | (1 << ExpresionesParser.RESTA) | (1 << ExpresionesParser.NOT) | (1 << ExpresionesParser.PARENA) | (1 << ExpresionesParser.FLOAT_LIT) | (1 << ExpresionesParser.NUM) | (1 << ExpresionesParser.STRING_LIT) | (1 << ExpresionesParser.ID))) != 0)):
                    break

            self.state = 52
            self.match(ExpresionesParser.LLAVEC)
            self.state = 53
            self.match(ExpresionesParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TopLevelDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExpresionesParser.RULE_topLevelDecl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TopStatementContext(TopLevelDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExpresionesParser.TopLevelDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self):
            return self.getTypedRuleContext(ExpresionesParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopStatement" ):
                listener.enterTopStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopStatement" ):
                listener.exitTopStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopStatement" ):
                return visitor.visitTopStatement(self)
            else:
                return visitor.visitChildren(self)


    class TopFuncDeclContext(TopLevelDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExpresionesParser.TopLevelDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcDecl(self):
            return self.getTypedRuleContext(ExpresionesParser.FuncDeclContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopFuncDecl" ):
                listener.enterTopFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopFuncDecl" ):
                listener.exitTopFuncDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopFuncDecl" ):
                return visitor.visitTopFuncDecl(self)
            else:
                return visitor.visitChildren(self)



    def topLevelDecl(self):

        localctx = ExpresionesParser.TopLevelDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevelDecl)
        try:
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = ExpresionesParser.TopFuncDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.funcDecl()
                pass

            elif la_ == 2:
                localctx = ExpresionesParser.TopStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(ExpresionesParser.ReturnTypeContext,0)


        def ID(self):
            return self.getToken(ExpresionesParser.ID, 0)

        def PARENA(self):
            return self.getToken(ExpresionesParser.PARENA, 0)

        def PARENC(self):
            return self.getToken(ExpresionesParser.PARENC, 0)

        def block(self):
            return self.getTypedRuleContext(ExpresionesParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(ExpresionesParser.ParamListContext,0)


        def getRuleIndex(self):
            return ExpresionesParser.RULE_funcDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = ExpresionesParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.returnType()
            self.state = 60
            self.match(ExpresionesParser.ID)
            self.state = 61
            self.match(ExpresionesParser.PARENA)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
<<<<<<< HEAD
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ExpresionesParser.INT_T) | (1 << ExpresionesParser.FLOAT_T) | (1 << ExpresionesParser.BOOL_T) | (1 << ExpresionesParser.STRING_T))) != 0):
                self.state = 59
=======
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 7680) != 0):
                self.state = 62
>>>>>>> 199f34a (Actualizacion de la función visitProgram en los archivos interpreter_visitor.py y semantic_visitor.py para mostrar un mensaje de inicio de ejecución del programa, incluyendo el nombre del programa si está especificado.)
                self.paramList()


            self.state = 65
            self.match(ExpresionesParser.PARENC)
            self.state = 66
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def t_type(self):
            return self.getTypedRuleContext(ExpresionesParser.T_typeContext,0)


        def VOID(self):
            return self.getToken(ExpresionesParser.VOID, 0)

        def getRuleIndex(self):
            return ExpresionesParser.RULE_returnType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnType" ):
                listener.enterReturnType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnType" ):
                listener.exitReturnType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnType" ):
                return visitor.visitReturnType(self)
            else:
                return visitor.visitChildren(self)




    def returnType(self):

        localctx = ExpresionesParser.ReturnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_returnType)
        try:
            self.state = 70
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExpresionesParser.INT_T, ExpresionesParser.FLOAT_T, ExpresionesParser.BOOL_T, ExpresionesParser.STRING_T]:
                self.enterOuterAlt(localctx, 1)
<<<<<<< HEAD
                self.state = 65
                self.t_type()
=======
                self.state = 68
                self.type_()
>>>>>>> 199f34a (Actualizacion de la función visitProgram en los archivos interpreter_visitor.py y semantic_visitor.py para mostrar un mensaje de inicio de ejecución del programa, incluyendo el nombre del programa si está especificado.)
                pass
            elif token in [ExpresionesParser.VOID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.match(ExpresionesParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpresionesParser.ParamContext)
            else:
                return self.getTypedRuleContext(ExpresionesParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExpresionesParser.COMMA)
            else:
                return self.getToken(ExpresionesParser.COMMA, i)

        def getRuleIndex(self):
            return ExpresionesParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = ExpresionesParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.param()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
<<<<<<< HEAD
            while _la==ExpresionesParser.COMMA:
                self.state = 70
=======
            while _la==36:
                self.state = 73
>>>>>>> 199f34a (Actualizacion de la función visitProgram en los archivos interpreter_visitor.py y semantic_visitor.py para mostrar un mensaje de inicio de ejecución del programa, incluyendo el nombre del programa si está especificado.)
                self.match(ExpresionesParser.COMMA)
                self.state = 74
                self.param()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def t_type(self):
            return self.getTypedRuleContext(ExpresionesParser.T_typeContext,0)


        def ID(self):
            return self.getToken(ExpresionesParser.ID, 0)

        def getRuleIndex(self):
            return ExpresionesParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = ExpresionesParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
<<<<<<< HEAD
            self.state = 77
            self.t_type()
            self.state = 78
=======
            self.state = 80
            self.type_()
            self.state = 81
>>>>>>> 199f34a (Actualizacion de la función visitProgram en los archivos interpreter_visitor.py y semantic_visitor.py para mostrar un mensaje de inicio de ejecución del programa, incluyendo el nombre del programa si está especificado.)
            self.match(ExpresionesParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(ExpresionesParser.VarDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(ExpresionesParser.AssignmentContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(ExpresionesParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(ExpresionesParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(ExpresionesParser.ForStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(ExpresionesParser.ReturnStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(ExpresionesParser.PrintStatementContext,0)


        def exprStatement(self):
            return self.getTypedRuleContext(ExpresionesParser.ExprStatementContext,0)


        def getRuleIndex(self):
            return ExpresionesParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ExpresionesParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.whileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.forStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                self.returnStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 89
                self.printStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 90
                self.exprStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def t_type(self):
            return self.getTypedRuleContext(ExpresionesParser.T_typeContext,0)


        def ID(self):
            return self.getToken(ExpresionesParser.ID, 0)

        def PCOMA(self):
            return self.getToken(ExpresionesParser.PCOMA, 0)

        def ASIGNA(self):
            return self.getToken(ExpresionesParser.ASIGNA, 0)

        def expr(self):
            return self.getTypedRuleContext(ExpresionesParser.ExprContext,0)


        def getRuleIndex(self):
            return ExpresionesParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = ExpresionesParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
<<<<<<< HEAD
            self.state = 90
            self.t_type()
            self.state = 91
            self.match(ExpresionesParser.ID)
=======
            self.state = 93
            self.type_()
>>>>>>> 199f34a (Actualizacion de la función visitProgram en los archivos interpreter_visitor.py y semantic_visitor.py para mostrar un mensaje de inicio de ejecución del programa, incluyendo el nombre del programa si está especificado.)
            self.state = 94
            self.match(ExpresionesParser.ID)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
<<<<<<< HEAD
            if _la==ExpresionesParser.ASIGNA:
                self.state = 92
=======
            if _la==28:
                self.state = 95
>>>>>>> 199f34a (Actualizacion de la función visitProgram en los archivos interpreter_visitor.py y semantic_visitor.py para mostrar un mensaje de inicio de ejecución del programa, incluyendo el nombre del programa si está especificado.)
                self.match(ExpresionesParser.ASIGNA)
                self.state = 96
                self.expr(0)


            self.state = 99
            self.match(ExpresionesParser.PCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExpresionesParser.ID, 0)

        def ASIGNA(self):
            return self.getToken(ExpresionesParser.ASIGNA, 0)

        def expr(self):
            return self.getTypedRuleContext(ExpresionesParser.ExprContext,0)


        def PCOMA(self):
            return self.getToken(ExpresionesParser.PCOMA, 0)

        def getRuleIndex(self):
            return ExpresionesParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = ExpresionesParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(ExpresionesParser.ID)
            self.state = 102
            self.match(ExpresionesParser.ASIGNA)
            self.state = 103
            self.expr(0)
            self.state = 104
            self.match(ExpresionesParser.PCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ExpresionesParser.IF, 0)

        def PARENA(self):
            return self.getToken(ExpresionesParser.PARENA, 0)

        def expr(self):
            return self.getTypedRuleContext(ExpresionesParser.ExprContext,0)


        def PARENC(self):
            return self.getToken(ExpresionesParser.PARENC, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpresionesParser.BlockContext)
            else:
                return self.getTypedRuleContext(ExpresionesParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(ExpresionesParser.ELSE, 0)

        def getRuleIndex(self):
            return ExpresionesParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = ExpresionesParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(ExpresionesParser.IF)
            self.state = 107
            self.match(ExpresionesParser.PARENA)
            self.state = 108
            self.expr(0)
            self.state = 109
            self.match(ExpresionesParser.PARENC)
            self.state = 110
            self.block()
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
<<<<<<< HEAD
            if _la==ExpresionesParser.ELSE:
                self.state = 108
=======
            if _la==2:
                self.state = 111
>>>>>>> 199f34a (Actualizacion de la función visitProgram en los archivos interpreter_visitor.py y semantic_visitor.py para mostrar un mensaje de inicio de ejecución del programa, incluyendo el nombre del programa si está especificado.)
                self.match(ExpresionesParser.ELSE)
                self.state = 112
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(ExpresionesParser.WHILE, 0)

        def PARENA(self):
            return self.getToken(ExpresionesParser.PARENA, 0)

        def expr(self):
            return self.getTypedRuleContext(ExpresionesParser.ExprContext,0)


        def PARENC(self):
            return self.getToken(ExpresionesParser.PARENC, 0)
